<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="24dp" />

        <TableLayout
            android:id="@+id/tableProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:paddingTop="@dimen/_24dp"
            android:paddingBottom="@dimen/_8dp" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_4dp"
                android:paddingBottom="@dimen/_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lesson"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20sp"
                    android:textColor="@color/black"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20sp"
                    android:textColor="@color/black"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="@dimen/_20sp"
            android:letterSpacing="0.1"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/bootstrap_green"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
